fix(tab-android): blurry font icons

--- a/packages/template-tab-navigation-ts/app/_app-common.scss
+++ b/packages/template-tab-navigation-ts/app/_app-common.scss
@@ -4,6 +4,11 @@
 .fa {
    font-family: "FontAwesome";
 }
+
+.t-36 {
+    font-size: 36;
+}
+
 // Common page class
 .page-content {
     .page-placeholder {
